@@ -1,8 +1,8 @@
 package org.hl7.fhir.r5.terminologies.client;
 
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -12,16 +12,15 @@ import java.util.Set;
 import lombok.Getter;
 import lombok.Setter;
 import org.hl7.fhir.exceptions.TerminologyServiceException;
+import org.hl7.fhir.r5.context.ILoggingService;
 import org.hl7.fhir.r5.extensions.ExtensionDefinitions;
-import org.hl7.fhir.r5.formats.IParser;
-import org.hl7.fhir.r5.formats.JsonParser;
 import org.hl7.fhir.r5.model.*;
 import org.hl7.fhir.r5.model.TerminologyCapabilities.TerminologyCapabilitiesCodeSystemComponent;
-import org.hl7.fhir.r5.model.TerminologyCapabilities.TerminologyCapabilitiesExpansionParameterComponent;
 import org.hl7.fhir.r5.terminologies.utilities.TerminologyCache;
 
 import org.hl7.fhir.utilities.MarkedToMoveToAdjunctPackage;
 import org.hl7.fhir.utilities.VersionUtilities;
+import org.hl7.fhir.utilities.http.HTTPHeader;
 
 @MarkedToMoveToAdjunctPackage
 public class TerminologyClientContext {
@@ -81,19 +80,56 @@ public class TerminologyClientContext {
   private final TerminologyCache txCache;
   private String testVersion;
   
+  // The HTTP header that carries the server-issued cache-id on subsequent requests.
+  public static final String CACHE_ID_HEADER = "X-Cache-Id";
+
   private Map<String, TerminologyClientContextUseCount> useCounts = new HashMap<>();
   private boolean isTxCaching;
   private final Set<String> cached = new HashSet<>();
   private boolean master;
-  private String cacheId;
+  // The cache-id for this server: server-issued via $cache-control during
+  // construction, or adopted from a shared client (see the constructor). null
+  // means this server isn't caching (didn't advertise $cache-control, caching
+  // was disabled, or starting a cache failed). Fixed for the life of the
+  // context; shutdown() ends its *use*, it doesn't change the identity.
+  private final String cacheId;
+  // Whether this context started the cache itself (and so is responsible for
+  // releasing it at shutdown), as opposed to adopting one already carried by a
+  // shared client.
+  private final boolean cacheOwned;
+  // Lifecycle: set once by shutdown(), never cleared. After shutdown the context
+  // must not be used for further requests (see shutdown()).
+  private boolean isShutdown;
+  private final ILoggingService logger;
 
-  protected TerminologyClientContext(ITerminologyClient client, TerminologyCache txCache, String cacheId, boolean master) throws IOException {
+  protected TerminologyClientContext(ITerminologyClient client, TerminologyCache txCache, boolean master, ILoggingService logger) throws IOException {
     super();
     this.client = client;
     this.txCache = txCache;
-    this.cacheId = cacheId;
     this.master = master;
+    this.logger = logger;
     initialize();
+
+    // Engage server-side caching. If this client instance already carries a
+    // cache-id header, another TerminologyClientContext has already started a
+    // cache on it (e.g. the IG publisher's version comparators wrap the master
+    // client in their own per-version contexts). Adopt that cache rather than
+    // starting a second one: addClientHeader appends, so starting again would
+    // leave two X-Cache-Id headers on every request, which the server reads as
+    // a single unknown id "id1, id2" and rejects. The adopting context re-sends
+    // resources it hasn't seen the server cache (its own bookkeeping starts
+    // empty), which is harmless because the cache is unsealed.
+    String adopted = (TerminologyClientContext.canUseCacheId && serverSupportsCacheControl()) ? existingCacheIdHeader() : null;
+    if (adopted != null) {
+      this.cacheId = adopted;
+      this.cacheOwned = false;
+    } else {
+      this.cacheId = startCache();
+      this.cacheOwned = this.cacheId != null;
+    }
+    if (this.cacheId != null) {
+      setTxCaching(true);
+    }
   }
 
   public Map<String, TerminologyClientContextUseCount> getUseCounts() {
@@ -146,11 +182,6 @@ public class TerminologyClientContext {
 
   public void setTxCapabilities(TerminologyCapabilities txcaps) {
     this.txcaps = txcaps;
-    try {
-      new JsonParser().setOutputStyle(IParser.OutputStyle.PRETTY).compose(new FileOutputStream("/Users/grahamegrieve/temp/txcaps.json"), txcaps);
-    } catch (IOException e) {
-
-    }
   }
 
   public Set<String> getCached() {
@@ -182,11 +213,13 @@ public class TerminologyClientContext {
   }
 
   public boolean usingCache() {
-    return isTxCaching && cacheId != null;
+    return !isShutdown && isTxCaching && cacheId != null;
   }
 
   public String getCacheId() {
-    return cacheId;
+    // after shutdown the cache no longer exists (or is no longer ours to use),
+    // so don't report it
+    return isShutdown ? null : cacheId;
   }
 
   private void initialize() throws IOException {
@@ -196,15 +229,10 @@ public class TerminologyClientContext {
       checkFeature();
       if (txCache != null && txCache.hasTerminologyCapabilities(getAddress())) {
         txcaps = txCache.getTerminologyCapabilities(getAddress());
-        try {
-          new JsonParser().setOutputStyle(IParser.OutputStyle.PRETTY).compose(new FileOutputStream("/Users/grahamegrieve/temp/txcaps.json"), txcaps);
-        } catch (IOException e) {
-
-        }
         if (txcaps.getSoftware().hasVersion() && !txcaps.getSoftware().getVersion().equals(capabilitiesStatement.getSoftware().getVersion())) {
           txcaps = null;
         }
-      } 
+      }
       if (txcaps == null) {
         txcaps = client.getTerminologyCapabilities();
         if (txCache != null) {
@@ -215,15 +243,115 @@ public class TerminologyClientContext {
           }
         }
       }
-      if (txcaps != null && TerminologyClientContext.canUseCacheId) {
-        for (TerminologyCapabilitiesExpansionParameterComponent t : txcaps.getExpansion().getParameter()) {
-          if ("cache-id".equals(t.getName())) {
-            setTxCaching(true);
-            break;
-          }
+  }
+
+  /**
+   * Start a server-side cache via the explicit $cache-control protocol: if the
+   * server advertises the operation (and caching is enabled), ask it to start a
+   * cache and use the server-issued id thereafter, carried as an HTTP header.
+   * The server owns the id, so it can authoritatively reject an unknown cache
+   * later. Called once, from the constructor.
+   *
+   * @return the server-issued cache-id, or null if the server doesn't support
+   * caching, caching is disabled, or the start failed.
+   */
+  private String startCache() {
+    if (!TerminologyClientContext.canUseCacheId || !serverSupportsCacheControl()) {
+      return null;
+    }
+    try {
+      // Ask for an *unsealed* cache: this client populates the cache
+      // incrementally (it sends each resource the first time it is needed, then
+      // refers to it by reference thereafter), so the cache must be allowed to
+      // grow after it is created. The protocol default is sealed=true, so we
+      // must request sealed=false explicitly. The body is r5 Parameters; the
+      // R3/R4 clients convert it down before sending.
+      Parameters body = new Parameters();
+      body.addParameter("sealed", false);
+      Parameters res = client.cacheControl(ITerminologyClient.CacheControlMode.START_CACHE, body);
+      String id = (res != null && res.hasParameter("cache-id")) ? res.getParameterValue("cache-id").primitiveValue() : null;
+      if (id != null && !id.isEmpty()) {
+        applyCacheIdHeader(id);
+        return id;
+      } else if (logger != null) {
+        logger.logMessage("Terminology server " + getAddress() + " advertised $cache-control but $cache-control?mode=start returned no cache-id; caching disabled for this server");
+      }
+    } catch (Exception e) {
+      if (logger != null) {
+        logger.logMessage("Unable to start a terminology cache on " + getAddress() + " via $cache-control (" + e.getMessage() + "); caching disabled for this server");
+      }
+    }
+    return null;
+  }
+
+  /**
+   * End this context's use of its server-side cache. If this context started the
+   * cache, it is released via $cache-control?mode=end (best-effort: failures are
+   * ignored, the server times caches out anyway); an adopted cache (see the
+   * constructor) is left alone, because the owning context may still be using it.
+   *
+   * Terminal and idempotent: only the first call has any effect. Repeat calls are
+   * deliberately a no-op rather than an error, because this is reached from
+   * best-effort teardown paths (e.g. BaseWorkerContext.unload()) that must be
+   * safe to run more than once. After shutdown the context must not be used for
+   * further requests: the underlying client still carries the (now released)
+   * cache-id header, so a server would reject them as referencing an unknown cache.
+   */
+  public void shutdown() {
+    if (isShutdown) {
+      return;
+    }
+    isShutdown = true;
+    if (cacheId != null && cacheOwned) {
+      try {
+        client.cacheControl(ITerminologyClient.CacheControlMode.END_CACHE, null);
+      } catch (Exception e) {
+        // best-effort release; ignore
+      }
+    }
+    setTxCaching(false);
+  }
+
+  /**
+   * @return the value of an existing cache-id header already present on this
+   * context's client (set by another context sharing the same client), or null.
+   */
+  private String existingCacheIdHeader() {
+    if (client.getClientHeaders() == null) {
+      return null;
+    }
+    for (HTTPHeader h : client.getClientHeaders()) {
+      if (CACHE_ID_HEADER.equalsIgnoreCase(h.getName())) {
+        return h.getValue();
+      }
+    }
+    return null;
+  }
+
+  /**
+   * @return true if the server's CapabilityStatement advertises the system-level
+   * $cache-control operation.
+   */
+  private boolean serverSupportsCacheControl() {
+    if (capabilitiesStatement == null) {
+      return false;
+    }
+    for (CapabilityStatement.CapabilityStatementRestComponent rest : capabilitiesStatement.getRest()) {
+      for (CapabilityStatement.CapabilityStatementRestResourceOperationComponent op : rest.getOperation()) {
+        if ("cache-control".equals(op.getName())) {
+          return true;
         }
       }
+    }
+    return false;
+  }
 
+  /**
+   * Add the server-issued cache-id as a persistent request header on this context's
+   * client, so every subsequent request carries it.
+   */
+  private void applyCacheIdHeader(String id) {
+    client.addClientHeader(new HTTPHeader(CACHE_ID_HEADER, id));
   }
 
   private void checkFeature() {
@@ -314,7 +442,7 @@ public class TerminologyClientContext {
 
   public String getHost() {
     try {
-      URL uri = new URL(getAddress());
+      URL uri = URI.create(getAddress()).toURL();
       return uri.getHost();
     } catch (MalformedURLException e) {
       return getAddress();
